src/Home.css
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');

#For-Pad{
    padding-top: 1rem;
    background-color: #B7B7A4;
    padding-bottom: 1rem;
}

#Home{
    padding-top: 5rem;
    font-family: "Playfair Display", serif;
    font-style: normal;
    font-optical-sizing: auto;
    color: #283618;
    background-color: #B7B7A4;
}

#Statement{
    font-size: 2rem;
    padding-left: 2rem;
}


.BigDraw{
    display: flex;
    justify-content: space-evenly;
    align-items: stretch;
    font-family: "Roboto", sans-serif;
    padding-top: 4.5rem;
    padding-left: 1rem;
    padding-right: 1rem;
    overflow: visible;
    flex-wrap: wrap;
}

.BigDraw p{
    max-width: 25rem;
    font-size: 1.18rem;
    padding: 0.5rem;
}

.BigDraw h2{
    font-size: 1.25rem;
    padding-left: 1rem;
}

hr{
    border-top: 2px solid #D4D4D4;
    margin-right: 1rem;
    margin-left: 1rem;
    margin-bottom: 0.5rem;
    margin-top: 0.5rem;
}


.BigDraw div{
    background-color:#F0EFEB;
    margin: 0.5rem;
    border-radius: 25px;
    padding: 2rem; 
    width: 19rem; /* Fixed width instead of max-width */
    height: 20rem; /* Fixed height instead of max-height */
    position: relative; /* Enables positioning adjustments for overlap */
}

@media screen and (max-width: 525px){
    #For-Pad{
        padding-top: 10rem;
    }

}

@media screen and (max-width: 700px){
    .BigDraw{
        flex-direction: column;
        align-content: center;
        justify-content: center;
        text-align: center;
    }

    .BigDraw div{
        padding-bottom: 0.8rem;
    }

    .right-photo {
        display: hidden;
    }
}

.right-photo {
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 2rem;
}

.left-box {
    flex: 2;
    background-color: #B7B7A4; 
    padding: 2rem;
    border-radius: 25rem;
    max-width: 66%; 
}

.right-photo {
    transition: transform 0.3s ease; 
}

.right-photo:hover {
    transform: scale(1.05); 
}

.split-container {
    display: flex;
    flex-direction: row; 

    gap: 1rem;
    align-items: stretch;
    padding: 1rem;
}

.individualBox {
    transition: transform 0.3s ease; 
}

.individualBox:hover {
    transform: scale(1.05); 
}

#photo {
  width: 100%;
  height: auto;
  max-width: 100rem;
  display: block;
  margin: 0 auto; 
  border-radius: 2rem; 
}

